# gk-flasher

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
gk_flasher/: dump_manifest.py  gk_flasher.py
gk_flasher/builders/: base.py  esp_idf_builder.py
gk_flasher/gui/: gk_flasher_gui.py
gk_flasher/schema/: args_schema.py  package_schema.py
gk_flasher/uploader/: uploader.py
